fix arrow alignment

--- a/src/sql/workbench/contrib/dataExplorer/browser/media/connectionViewletPanel.css
+++ b/src/sql/workbench/contrib/dataExplorer/browser/media/connectionViewletPanel.css
@@ -105,7 +105,6 @@
 .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content.server-group {
 	padding-right: 20px;
 	padding-top: 5px;
-	padding-bottom: 5px;
 }
 
 /* OE and connection label */
